--- a/srcs/backend/proxy/data/package.json
+++ b/srcs/backend/proxy/data/package.json
@@ -13,6 +13,7 @@
     "fclean": "npm run clean && rm -rf node_modules"
   },
   "dependencies": {
+    "@fastify/http-proxy": "^11.3.0",
     "fastify": "^5.6.2"
   },
   "devDependencies": {
