--- a/srcs/backend/database/data/package.json
+++ b/srcs/backend/database/data/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
+    "dev": "tsx watch src/database.ts",
     "start": "node build/database.js",
     "clean": "rm -rf build",
     "fclean": "npm run clean && rm -rf node_modules"
@@ -19,6 +20,7 @@
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^24.10.1",
+    "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   }
 }
