--- a/srcs/backend/proxy/data/package.json
+++ b/srcs/backend/proxy/data/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
+    "dev" : "tsx src/proxy.ts",
     "start": "node build/proxy.js",
     "clean": "rm -rf build",
     "fclean": "npm run clean && rm -rf node_modules"
@@ -19,6 +20,7 @@
   "devDependencies": {
     "@fastify/static": "^8.3.0",
     "@types/node": "^24.10.1",
+    "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   }
 }
