--- a/srcs/backend/user/data/package.json
+++ b/srcs/backend/user/data/package.json
@@ -7,8 +7,9 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build" : "tsc",
-    "start" : "node build/user.js",
+    "build": "tsc",
+    "dev" : "tsx src/user.ts",
+    "start": "node build/user.js",
     "clean": "rm -rf build",
     "fclean": "npm run clean && rm -rf node_modules"
   },
@@ -17,6 +18,7 @@
   },
   "devDependencies": {
     "@types/node": "^24.10.1",
+    "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   }
 }
