--- a/srcs/backend/authenticate/data/tsconfig.json
+++ b/srcs/backend/authenticate/data/tsconfig.json
@@ -4,6 +4,9 @@
     // File Layout
     "rootDir": "./src",
     "outDir": "./build",
+    "paths" : {
+      "shared/*": ["./shared/*"]
+    },
 
     // Environment Settings
     // See also https://aka.ms/tsconfig/module
