--- a/srcs/backend/database/data/package.json
+++ b/srcs/backend/database/data/package.json
@@ -9,7 +9,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
     "dev": "tsx watch src/database.ts",
-    "start": "node build/database.js",
+    "start": "npm run builld && node build/database.js",
     "clean": "rm -rf build",
     "fclean": "npm run clean && rm -rf node_modules"
   },
