--- a/srcs/backend/database/data/tsconfig.json
+++ b/srcs/backend/database/data/tsconfig.json
@@ -12,7 +12,7 @@
     // See also https://aka.ms/tsconfig/module
     "module": "ES2022",
     "target": "ES2022",
-    "moduleResolution": "bundler",
+    "moduleResolution": "node",
     "lib": ["esnext"],
     "types": ["node"],
 
