--- a/srcs/backend/user/data/package.json
+++ b/srcs/backend/user/data/package.json
@@ -14,6 +14,8 @@
     "fclean": "npm run clean && rm -rf node_modules"
   },
   "dependencies": {
+    "@fastify/swagger": "^9.6.1",
+    "@fastify/swagger-ui": "^5.2.3",
     "fastify": "^5.6.2"
   },
   "devDependencies": {
