--- a/srcs/backend/authenticate/data/package.json
+++ b/srcs/backend/authenticate/data/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@fastify/jwt": "^10.0.0",
+    "@sinclair/typebox": "^0.34.41",
     "fastify": "^5.6.2"
   },
   "devDependencies": {
