--- a/srcs/backend/database/data/package.json
+++ b/srcs/backend/database/data/package.json
@@ -16,6 +16,9 @@
   "dependencies": {
     "@fastify/swagger": "^9.6.1",
     "@fastify/swagger-ui": "^5.2.3",
+    "@fastify/type-provider-typebox": "^6.1.0",
+    "@sinclair/typebox": "^0.34.41",
+    "ajv-formats": "^3.0.1",
     "better-sqlite3": "^12.5.0",
     "fastify": "^5.6.2"
   },
