--- a/srcs/backend/game/data/package.json
+++ b/srcs/backend/game/data/package.json
@@ -8,12 +8,13 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "dev" : "tsx watch src/game.ts",
+    "dev": "tsx watch src/game.ts",
     "start": "npm run builld && node build/game.js",
     "clean": "rm -rf build",
     "fclean": "npm run clean && rm -rf node_modules"
   },
   "dependencies": {
+    "@sinclair/typebox": "^0.34.41",
     "fastify": "^5.6.2"
   },
   "devDependencies": {
