--- a/srcs/backend/proxy/data/package.json
+++ b/srcs/backend/proxy/data/package.json
@@ -8,13 +8,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "dev" : "tsx watch src/proxy.ts",
+    "dev": "tsx watch src/proxy.ts",
     "start": "npm run builld && node build/proxy.js",
     "clean": "rm -rf build",
     "fclean": "npm run clean && rm -rf node_modules"
   },
   "dependencies": {
     "@fastify/http-proxy": "^11.3.0",
+    "@sinclair/typebox": "^0.34.41",
     "fastify": "^5.6.2"
   },
   "devDependencies": {
