--- a/srcs/backend/user/data/package.json
+++ b/srcs/backend/user/data/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@fastify/swagger": "^9.6.1",
     "@fastify/swagger-ui": "^5.2.3",
+    "@sinclair/typebox": "^0.34.41",
     "fastify": "^5.6.2"
   },
   "devDependencies": {
