--- a/srcs/frontend/data/package.json
+++ b/srcs/frontend/data/package.json
@@ -23,6 +23,7 @@
     "vite": "^6.0.0"
   },
   "dependencies": {
+    "@sinclair/typebox": "^0.34.41",
     "vite-plugin-static-copy": "^3.1.4"
   }
 }
