--- a/srcs/backend/authenticate/data/package.json
+++ b/srcs/backend/authenticate/data/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "@fastify/jwt": "^10.0.0",
+    "@fastify/swagger": "^9.6.1",
+    "@fastify/swagger-ui": "^5.2.3",
     "@sinclair/typebox": "^0.34.41",
     "fastify": "^5.6.2"
   },
