--- a/srcs/backend/game/data/package.json
+++ b/srcs/backend/game/data/package.json
@@ -14,6 +14,7 @@
     "fclean": "npm run clean && rm -rf node_modules"
   },
   "dependencies": {
+    "@fastify/websocket": "^11.0.2",
     "@sinclair/typebox": "^0.34.41",
     "fastify": "^5.6.2"
   },
