--- a/srcs/docker-compose.yaml
+++ b/srcs/docker-compose.yaml
@@ -94,6 +94,22 @@ services:
       - ./backend/shared/:/data/src/shared:ro
     restart: always
 
+  tournament:
+    container_name: tournament
+    init: true
+    env_file:
+      - .env
+    build:
+      context: backend/tournament
+    expose:
+      - 3000
+    networks:
+      - transcendence
+    volumes:
+      - ./backend/tournament/data:/data
+      - ./backend/shared/:/data/src/shared:ro
+    restart: always
+
   frontend:
     container_name: frontend
     init: true
