--- a/srcs/backend/authenticate/data/package.json
+++ b/srcs/backend/authenticate/data/package.json
@@ -17,12 +17,16 @@
     "@fastify/jwt": "^10.0.0",
     "@fastify/swagger": "^9.6.1",
     "@fastify/swagger-ui": "^5.2.3",
+    "@otplib/preset-default": "^12.0.1",
     "@sinclair/typebox": "^0.34.41",
     "fastify": "^5.6.2",
-    "fastify-bcrypt": "^1.0.1"
+    "fastify-bcrypt": "^1.0.1",
+    "otplib": "^13.1.1",
+    "qrcode": "^1.5.4"
   },
   "devDependencies": {
     "@types/node": "^24.10.1",
+    "@types/qrcode": "^1.5.6",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   }
